--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -174,6 +174,8 @@ body {
 	pointer-events: none;
 	overflow-y: visible;
 	height: 50000px; /* hack so firefox doesn't cut off the lines */
+
+	display: none;
 }
 
 #main .scenes .scenes-link {
@@ -284,9 +286,17 @@ nav, .scene-panel, .script-panel, .script-option-panel, .media-editor .thumbnail
 	}
 }
 
-.new-scene-button {
+.new-scene-button, .view-links {
 	float: right;
 	z-index: 2;
+}
+
+.view-links {
+	margin-right: 1em;
+}
+
+.view-links-checkbox {
+	pointer-events: none;
 }
 
 .empty_scene {
