Fancy orthogonal scene lines

--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -177,8 +177,8 @@ body {
 }
 
 #main .scenes .scenes-link {
-	stroke: rgba(0,0,0,0.5);
-	stroke-width: 2px;
+	stroke: rgb(101,184,34);
+	stroke-width: 3px;
 	stroke-linecap: round;
 }
 
