Draw scenes on minimap

--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -303,7 +303,12 @@ nav, .scene-panel, .script-panel, .script-option-panel, .media-editor .thumbnail
 
 .minimap-viewport {
 	position: absolute;
-	background-color: rgba(255,50,0,0.6);
+	background-color: rgba(255,0,50,0.6);
+}
+
+.minimap-scene {
+	position: absolute;
+	background-color: rgba(0,50,255,0.6);
 }
 
 .empty_scene {
