Minimap on bottom-right

--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -293,7 +293,7 @@ nav, .scene-panel, .script-panel, .script-option-panel, .media-editor .thumbnail
 .minimap {
 	position: absolute;
 	bottom: 15px;
-	left: 15px;
+	right: 15px;
 	width: 150px;
 	height: 150px;
 	background-color: rgba(255,255,255,0.75);
