Hacks to fix previous hacks with bootstrap

--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -169,7 +169,7 @@ body {
 #main .scenes .scenes-links {
 	.absolute;
 	position: absolute;
-	z-index: 991;
+	z-index: 990;
 	pointer-events: none;
 	overflow: visible;
 }
@@ -287,7 +287,7 @@ nav, .scene-panel, .script-panel, .script-option-panel, .media-editor .thumbnail
 	position: absolute;
 	top: 20px;
 	right: 20px;
-	z-index: 992;
+	z-index: 991;
 }
 
 .minimap {
@@ -957,5 +957,9 @@ h5:hover .object-id, h4:hover .object-id {
 }
 
 .navbar-fixed-top {
-	z-index: 990;
+	z-index: 992;
+}
+
+form, .panel {
+	margin: 15px;
 }
