Better bootstrap padding hack

--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -951,15 +951,11 @@ h5:hover .object-id, h4:hover .object-id {
 
 /* These are hacks while jumping from bootstrap 3.3.0 to 3.3.7 */
 
-.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
+.col-xs-1:not(.padded), .col-sm-1:not(.padded), .col-md-1:not(.padded), .col-lg-1:not(.padded), .col-xs-2:not(.padded), .col-sm-2:not(.padded), .col-md-2:not(.padded), .col-lg-2:not(.padded), .col-xs-3:not(.padded), .col-sm-3:not(.padded), .col-md-3:not(.padded), .col-lg-3:not(.padded), .col-xs-4:not(.padded), .col-sm-4:not(.padded), .col-md-4:not(.padded), .col-lg-4:not(.padded), .col-xs-5:not(.padded), .col-sm-5:not(.padded), .col-md-5:not(.padded), .col-lg-5:not(.padded), .col-xs-6:not(.padded), .col-sm-6:not(.padded), .col-md-6:not(.padded), .col-lg-6:not(.padded), .col-xs-7:not(.padded), .col-sm-7:not(.padded), .col-md-7:not(.padded), .col-lg-7:not(.padded), .col-xs-8:not(.padded), .col-sm-8:not(.padded), .col-md-8:not(.padded), .col-lg-8:not(.padded), .col-xs-9:not(.padded), .col-sm-9:not(.padded), .col-md-9:not(.padded), .col-lg-9:not(.padded), .col-xs-10:not(.padded), .col-sm-10:not(.padded), .col-md-10:not(.padded), .col-lg-10:not(.padded), .col-xs-11:not(.padded), .col-sm-11:not(.padded), .col-md-11:not(.padded), .col-lg-11:not(.padded), .col-xs-12:not(.padded), .col-sm-12:not(.padded), .col-md-12:not(.padded), .col-lg-12:not(.padded) {
   padding-right: 0;
   padding-left: 0;
 }
 
 .navbar-fixed-top {
 	z-index: 992;
-}
-
-form, .panel {
-	margin: 15px;
 }
