Fix no-scroll in AR target page

--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -488,6 +488,11 @@ h5:hover .object-id, h4:hover .object-id {
 	background: rgba(0,0,0,0.25);
 }
 
+.ar_target-editor {
+	height: 100%;
+	overflow-y: auto;
+}
+
 .ar_target-editor .ar_target-drop-target {
 	padding: 2em 1em;
 }
