Fix non-scrolling editors list

--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -566,7 +566,7 @@ h5:hover .object-id, h4:hover .object-id {
 }
 
 /* Scrolling for tall areas */
-.scenes, .media-editor, .media-editor .media-drop-target, .ar_target-editor .ar_target-drop-target, .quests-editor, .conversation-editor, .conversations-editor, .games-list-container, .notes-editor, .tabs-editor, .scroll-area {
+.scenes, .media-editor, .media-editor .media-drop-target, .ar_target-editor .ar_target-drop-target, .quests-editor, .conversation-editor, .conversations-editor, .games-list-container, .notes-editor, .tabs-editor, .scroll-area, .editor-sharing {
 	height: 100%;
 	overflow-x: auto;
 }
